[project]
authors = [{ name = "Ben Pedigo", email = "benjamindpedigo@gmail.com" }]
dependencies = ["caveclient", "morphlink", "paleo", "paleo-cloud"]
description = "Add your description here"
name = "paleo-analysis"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv.sources]
caveclient = { path = "deps/caveclient", editable = true }
morphlink = { path = "deps/morphsync", editable = true }
paleo = { path = "deps/paleo", editable = true }
paleo-cloud = { path = "deps/paleo-cloud", editable = true }
