[project]
authors = [{ name = "Ben Pedigo", email = "benjamindpedigo@gmail.com" }]
dependencies = [
    "caveclient",
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "morphsync",
    "paleo[skeleton]",
    "paleo-cloud",
    "pyvista[all]>=0.44.2",
    "seaborn>=0.13.2",
]
description = "Add your description here"
name = "paleo-analysis"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv.sources]
caveclient = { path = "deps/caveclient", editable = true }
morphsync = { path = "deps/morphsync", editable = true }
paleo-cloud = { path = "deps/paleo-cloud", editable = true }
paleo = { path = "deps/paleo", editable = true }
